--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,11 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.5.3",
+    "tailwindcss": "^3.6.0",
     "vite": "^4.4.9"
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
   }
 }
